[package]
name = "tiletapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.0.1"
actix-web-actors = "4.1"
actix-files = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
openssl = { version = "*", features = ["vendored"] }
random_color = "0.6.1"

env_logger = "0.9"
log = "0.4"

[profile.release]
opt-level = 'z'
# debug = true
lto = true
codegen-units = 1
